# forest-data-harmonizer

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  dev.ps1
apps/contributor/src-tauri/: Cargo.toml  tauri.conf.json
apps/contributor/src-tauri/capabilities/: default.json
apps/contributor/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
apps/contributor/web/: app-minimal.js  app.js  i18n.js  index.html  style.css  test.html
apps/contributor/web/locales/: bundle.js  en.js  es.js  pt.js
assets/: Dados MSI - Mata da Silvicultura.xlsx
crates/gfb3-core/: Cargo.toml
crates/gfb3-core/src/: export.rs  lib.rs  log.rs  mapping.rs  reader.rs  schema.rs  transform.rs  validation.rs
