[package]
name    = "gfb3-core"
version = "0.1.1"
edition = "2021"

[dependencies]
polars     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
chrono     = { workspace = true }
calamine        = { workspace = true }
rust_xlsxwriter = { workspace = true }
