[package]
name    = "contributor"
version = "0.1.2"
edition = "2021"

[package.metadata.tauri-build]

[lib]
name = "contributor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri      = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
gfb3-core  = { path = "../../../crates/gfb3-core" }
polars     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
ureq       = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic   = "abort"
codegen-units = 1
lto     = true
strip   = true
